<resources>
    <string name="asset_statements" translatable="false">
    [{
      \"include\": \"https://bookplayer.driot.com/.well-known/assetlinks.json\"
    }]
    </string>
    <string name="AutoTest_b1_text" translatable="false">zip (700KB)</string>
    <string name="AutoTest_b2_text" translatable="false">multi lang zip (7MB)</string>
    <string name="AutoTest_b3_text" translatable="false">m4b (9MB)</string>
    <string name="Librivox" translatable="false">LibriVox</string>
    <string name="three_dots" translatable="false">…</string>
    <string name="admin" translatable="false">Admin</string>
    <string name="play" translatable="false"><![CDATA[>]]></string>
    <string name="rewind" translatable="false"><![CDATA[<<]]></string>
    <string name="forward" translatable="false"><![CDATA[>>]]></string>
    <string name="pause" translatable="false">||</string>
    <string name="btnSleepSet" translatable="false">Sleep</string>
    <string name="menu_seeLog" translatable="false">See Logs</string>
    <string name="permissions_ok_button" translatable="false">OK</string>
    <string name="AutoTest_b4_text" translatable="false">zip (220MB)</string>
    <string name="emoji_paste" translatable="false">📋</string>
    <string name="emoji_clear" translatable="false">🗑️</string>
    <string name="librivox" translatable="false">LibriVox</string>
    <string name="Internet_Archive" translatable="false">Internet Archive</string>
    <string name="Gutenberg" translatable="false">Gutenberg</string>
    <string name="pixabay" translatable="false">Pixabay</string>
    <string name="google_books" translatable="false">Google Books</string>
    <string name="open_library" translatable="false">Open Library</string>
    <string name="google_images" translatable="false">Google Images</string>
    <string name="lorem_ipsum" translatable="false">lorem ipsum</string>
    <string name="Added">"Added"</string>
    <string name="after">after</string>
    <string name="Album">Album</string>
    <string name="Alphabetically">Alphabetically</string>
    <string name="Also">Also</string>
    <string name="Artist">Artist</string>
    <string name="Author">Author</string>
    <string name="Audio">Audio</string>
    <string name="AudioBooks">"AudioBooks"</string>
    <string name="Auto_Delete">Auto-Delete</string>
    <string name="Auto_Download">Auto-Download</string>
    <string name="auto_download">auto-download</string>
    <string name="auto_download_short">auto</string>
    <string name="Automotive">Automotive</string>
    <string name="back">Back</string>
    <string name="bars">bars</string>
    <string name="Bitrate">Bitrate</string>
    <string name="Bookshelves">"Bookshelves (slow)"</string>
    <string name="Bundle">Bundle</string>
    <string name="calculating_storage">Calculating…</string>
    <string name="Cancelled">Cancelled</string>
    <string name="candidates">candidates</string>
    <string name="Channels">Channels</string>
    <string name="chars">chars</string>
    <string name="Cleaning">Cleaning</string>
    <string name="clean_memory_scanning_folders">Scanning folders used by the app, %1$d sec elapsed…</string>
    <string name="clean_memory_sdcard_slow">SD card access is slow compared to internal device memory.</string>
    <string name="clean_memory_empty_internal">No books in BookPlayer internal storage.</string>
    <string name="clean_memory_empty_sdcard">No books in BookPlayer SD card storage.</string>
    <string name="clear">Clear</string>
    <string name="Close">Close</string>
    <string name="collapse">collapse</string>
    <string name="confirm">confirm</string>
    <string name="copied">copied</string>
    <string name="Copy">Copy</string>
    <string name="count">count</string>
    <string name="Creator">Creator</string>
    <string name="days">days</string>
    <string name="Delete">Delete</string>
    <string name="Deleting">Deleting</string>
    <string name="denied">denied</string>
    <string name="Date">Date</string>
    <string name="Description">Description</string>
    <string name="Design">Design</string>
    <string name="destination">destination</string>
    <string name="device">device</string>
    <string name="Disc">Disc</string>
    <string name="done">done</string>
    <string name="download">download</string>
    <string name="Download">Download</string>
    <string name="download_noun">Download</string>
    <string name="downloaded">"downloaded"</string>
    <string name="Downloading">"Downloading"</string>
    <string name="downloads">downloads</string>
    <string name="Duration">Duration</string>
    <string name="Ebooks">Ebooks</string>
    <string name="Engine">Engine</string>
    <string name="ep">"ep"</string>
    <string name="episodes">episodes</string>
    <string name="error">error</string>
    <string name="Exit">Exit</string>
    <string name="expand">expand</string>
    <string name="Export_3pt">"Export…"</string>
    <string name="favorite">favorite</string>
    <string name="favorites">favorites</string>
    <string name="Favorites">Favorites</string>
    <string name="favorites_slash_history">Favorites / History</string>
    <string name="File">File</string>
    <string name="File_and_icon">📄 File</string>
    <string name="flag">flag</string>
    <string name="Folder">Folder</string>
    <string name="Folder_and_icon">📁 Folder</string>
    <string name="folder">folder</string>
    <string name="Font">Font</string>
    <string name="Forbidden">Forbidden</string>
    <string name="found">found</string>
    <string name="from">from</string>
    <string name="General">General</string>
    <string name="Genre">Genre</string>
    <string name="get">get</string>
    <string name="granted">granted</string>
    <string name="History">History</string>
    <string name="homepage">homepage</string>
    <string name="icon">icon</string>
    <string name="Import">Import</string>
    <string name="Identifier">Identifier</string>
    <string name="in">in</string>
    <string name="Integration">Integration</string>
    <string name="items">items</string>
    <string name="manual">manual</string>
    <string name="Menu">Menu</string>
    <string name="podcasts">podcasts</string>
    <string name="radio">Radio</string>
    <string name="settings">Settings</string>
    <string name="sort">sort</string>
    <string name="Stats">Stats</string>
    <string name="Utilities">Utilities</string>
    <string name="Website">Website</string>
    <string name="app_info">App Info</string>
    <string name="utilities_open_app_info">Open App Info</string>
    <string name="utilities_app_info_explanation">Opens the Android system settings page for this app, where you can review permissions, check storage usage, or force-stop the app.</string>
    <string name="reset_app">Reset App</string>
    <string name="add_book">Add Book</string>
    <string name="nav_radio">Radio</string>
    <string name="nav_podcasts">Podcasts</string>
    <string name="default_for">default for</string>
    <string name="option_copy_file_title">Copy files</string>
    <string name="option_delete_source_file_title">Automatic Source file deletion</string>
    <string name="option_delete_source_file_subtitle">After an audiobook has been loaded into BookPlayer, the source file/folder you picked can be deleted automatically.
        \nNote: This is only possible for ZIP files or if the \'Copy files\' option is enabled.
        </string>
    <string name="option_delete_source_file_text">Automatically delete picked file/folder once loaded into BookPlayer.</string>
    <string name="option_open_with_title">Open files from other apps</string>
    <string name="option_open_with_subtitle">Adds “Open with BookPlayer” to the “Share” and “Open with” menus when you select a file in your file manager.</string>
    <string name="option_open_with_text">For zip and most audio files.</string>
    <string name="option_open_with_text_all">For any kind of file (fail safe).</string>
    <string name="option_split_m4b">.m4b splitting</string>
    <string name="option_split_m4b_text">Extract chapters from M4B.</string>
    <string name="option_copy_file_special_zip">zip and split m4b are always copied</string>
    <string name="option_sdcard_title">SD card</string>
    <string name="option_sdcard_text">When copying audio to reserved space, use SD card instead of internal storage</string>
    <string name="option_sdcard_text_caution">Please note: If you remove or erase the SD card, you will lose your audio files.</string>
    <string name="option_copy_file_subtitle">Pros:
        \n* [Read Audio] permission is not needed.
        \n* No risk to lose the audiobook and progress if its source file gets accidentally deleted/moved.
        \n\nCons:
        \n* More memory will be needed if you do not delete the source file.
    </string>
    <string name="option_copy_file_text">Copy audio files to the internal, reserved, BookPlayer app memory.</string>
    <string name="menu_sendmail">mail developer</string>
    <string name="delete_cache">Delete cache</string>
    <string name="delete_cache_explanation">Deletes downloaded cover images (books/podcasts) that are no longer linked to anything in your library.</string>
    <string name="delete_system_cache">Delete system cache</string>
    <string name="delete_system_cache_explanation">Clears the Android system cache used for temporary files, such as not-yet-downloaded podcast episode covers. Android recreates it automatically as needed.</string>
    <string name="utilities_cache_management_title">Cache Management</string>
    <string name="language_flag">language flag</string>
    <string name="voice_flag">voice flag</string>
    <string name="option_create_cover">Create covers</string>
    <string name="option_create_cover_text">If no cover image is found upon book loading, a pastel image with book title initials will be created.</string>
    <string name="utilities_backup_restore_title">Backup / Restore</string>
    <string name="utilities_backup_library">Backup</string>
    <string name="utilities_restore_library">Restore</string>
    <string name="utilities_backup_restore_desc">Save and restore your library to/from a file - settings and progress always, plus your choice of the actual audiobook files too.</string>
    <string name="utilities_quick_access_title">Quick Access</string>
    <string name="utilities_quick_access_desc">Shortcuts also available from the menu on the main screen.</string>
    <string name="source_flag">source flag</string>
    <string name="voice_name">voice name</string>
    <string name="option_reset_settings_values">Reset Settings Values</string>
    <string name="reset_to_default">Reset to Default</string>
    <string name="reset_for_power_user">Reset for Power User</string>
    <string name="option_reset_for_power_user_explain_text">
    The \'Power User\' reset restores app defaults but keeps specific settings customized:
    \nImport:
        \n* [don\'t copy]
        \n* [\"Open With\" for any kind of file]
    \nPlayback behavior:
        \n* [don\'t open the dedicated play view]
        \n* [keep audio playing when exiting the app]
    \nNavigation:
        \n* [Open favorites first] for Radio and Podcast
    </string>
    <string name="cancel_ongoing_operation">Cancel ongoing operations</string>
    <string name="option_reset_app_explain_text">If the app ever get stuck, for example after a crash during a book import, tap this button to reset all processes.\nNo data will be lost, it\'s just a system reset.</string>
    <string name="import_settings">Import settings</string>
    <string name="option_split_m4b_subtitle">If unchecked, M4B files will be imported as single tracks.</string>
    <string name="option_split_m4b_subtitle_note">Note: the chapter-splitting feature currently supports only very standard M4B files.</string>
    <string name="nearby_share_receive_book">Quick share</string>
</resources>