<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/root_container"
        style="@style/SettingsFragmentRoot">

        <!-- Optional local title (hidden when embedded inline) -->
        <LinearLayout android:id="@+id/ll_title" style="@style/wideLinearLayout_Vertical">
            <TextView android:text="@string/Utilities" style="@style/OptionMasterTitle"/>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView style="@style/SettingsGroupCard">
        <LinearLayout style="@style/SettingsGroupCardContent">

            <TextView
                style="@style/SettingsGroupTitle"
                android:text="@string/option_reset_settings_values"
                />

            <Button
                style="@style/Widget.BookPlayer.Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/btn_reset_settings_values_to_default"
                android:text="@string/reset_to_default"
                />
            <Button
                style="@style/Widget.BookPlayer.Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/btn_reset_settings_values_for_power_user"
                android:text="@string/reset_for_power_user"
                />
            <TextView
                style="@style/OptionSubTitle"
                android:text="@string/option_reset_for_power_user_explain_text"
                android:textStyle="italic"
                />
        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView style="@style/SettingsGroupCard">
        <LinearLayout style="@style/SettingsGroupCardContent">

            <TextView
                style="@style/SettingsGroupTitle"
                android:text="@string/reset_app"
                />

            <Button
                style="@style/Widget.BookPlayer.Button.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/btn_reset_app"
                android:text="@string/cancel_ongoing_operation"
                />
            <TextView
                style="@style/OptionSubTitle"
                android:text="@string/option_reset_app_explain_text"
                android:textStyle="italic"
                />
        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView style="@style/SettingsGroupCard">
        <LinearLayout style="@style/SettingsGroupCardContent">

            <TextView
                style="@style/SettingsGroupTitle"
                android:text="@string/utilities_backup_restore_title" />
            <TextView
                style="@style/betatest"
                android:layout_marginBottom="10dp"/>

            <Button
                style="@style/Widget.BookPlayer.Button.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/btn_backup_library"
                android:text="@string/utilities_backup_library" />

            <Button
                style="@style/Widget.BookPlayer.Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/btn_restore_library"
                android:text="@string/utilities_restore_library" />

            <TextView
                style="@style/OptionSubTitle"
                android:text="@string/utilities_backup_restore_desc"
                android:textStyle="italic" />
        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView style="@style/SettingsGroupCard">
        <LinearLayout style="@style/SettingsGroupCardContent">

            <TextView
                style="@style/SettingsGroupTitle"
                android:text="@string/app_info" />

            <Button
                style="@style/Widget.BookPlayer.Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/btn_app_info"
                android:text="@string/utilities_open_app_info" />

            <TextView
                style="@style/OptionSubTitle"
                android:text="@string/utilities_app_info_explanation"
                android:textStyle="italic" />
        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView style="@style/SettingsGroupCard">
        <LinearLayout style="@style/SettingsGroupCardContent">

            <TextView
                style="@style/SettingsGroupTitle"
                android:text="@string/utilities_cache_management_title" />

            <Button
                style="@style/Widget.BookPlayer.Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/btn_delete_cache"
                android:text="@string/delete_cache" />
            <TextView
                style="@style/OptionSubTitle"
                android:text="@string/delete_cache_explanation"
                android:textStyle="italic" />

            <Button
                style="@style/Widget.BookPlayer.Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/btn_delete_system_cache"
                android:text="@string/delete_system_cache" />
            <TextView
                style="@style/OptionSubTitle"
                android:text="@string/delete_system_cache_explanation"
                android:textStyle="italic" />
        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView style="@style/SettingsGroupCard">
        <LinearLayout style="@style/SettingsGroupCardContent">

            <TextView
                style="@style/SettingsGroupTitle"
                android:text="@string/utilities_quick_access_title" />

            <Button
                style="@style/Widget.BookPlayer.Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/btn_quick_access_stats"
                android:text="@string/Stats" />

            <Button
                style="@style/Widget.BookPlayer.Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/btn_quick_access_cleaning"
                android:text="@string/Cleaning" />

            <Button
                style="@style/Widget.BookPlayer.Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/btn_quick_access_manual"
                android:text="@string/manual" />

            <Button
                style="@style/Widget.BookPlayer.Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/btn_quick_access_website"
                android:text="@string/Website" />

            <TextView
                style="@style/OptionSubTitle"
                android:text="@string/utilities_quick_access_desc"
                android:textStyle="italic" />
        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
