<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/root_container"
        style="@style/LinearLayoutOptionsVertical"
        android:padding="8dp">

        <!-- Optional local title (hidden when embedded inline) -->
        <LinearLayout android:id="@+id/ll_title" style="@style/wideLinearLayout_Vertical">
            <View style="@style/myStyleViewSimpleHorizontalBar" />
            <TextView android:text="@string/import_settings" style="@style/OptionMasterTitle"/>
            <View style="@style/myStyleViewSimpleHorizontalBar" />
        </LinearLayout>

        <!-- SD Card -->
        <LinearLayout
            android:id="@+id/ll_container_sd_card"
            style="@style/LinearLayoutOptionsVertical"
            android:layout_marginTop="0dp">

            <TextView
                style="@style/OptionTitle"
                android:layout_marginTop="0dp"
                android:text="@string/option_sdcard_title" />

            <LinearLayout
                android:id="@+id/ll_use_sd_card"
                style="@style/LinearLayoutOptionsCheckBoxHorizontal">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/chk_use_sd_card"
                    style="@style/OptionCheckBox" />
                <TextView
                    style="@style/OptionCheckBoxText"
                    android:text="@string/option_sdcard_text" />
            </LinearLayout>

            <TextView
                style="@style/OptionCheckBoxText"
                android:textSize="14sp"
                android:text="@string/option_sdcard_text_caution" />
        </LinearLayout>

        <View style="@style/myStyleViewSimpleHorizontalBar" />

        <!-- Copy file -->
        <LinearLayout style="@style/LinearLayoutOptionsVertical">
            <TextView
                style="@style/OptionTextDefaultFor"
                android:text="@string/default_for" />

            <TextView
                android:id="@+id/txtCopyFileHead"
                style="@style/OptionTitle"
                android:text="@string/option_copy_file_title"
                android:layout_marginTop="0dp" />

            <LinearLayout
                android:id="@+id/ll_copy_file"
                style="@style/LayoutWrapContentMargin20horizontal"
                android:layout_height="wrap_content">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/chk_copy_file"
                    style="@style/OptionCheckBox" />
                <TextView
                    style="@style/OptionCheckBoxText"
                    android:text="@string/option_copy_file_text" />
            </LinearLayout>

            <TextView
                style="@style/OptionSubTitle"
                android:text="@string/option_copy_file_special_zip" />
            <TextView
                style="@style/OptionSubTitle"
                android:text="@string/option_copy_file_subtitle" />
        </LinearLayout>

        <View style="@style/myStyleViewSimpleHorizontalBar" />

        <!-- Create cover -->
        <LinearLayout style="@style/LinearLayoutOptionsVertical">
            <TextView
                style="@style/OptionTitle"
                android:text="@string/option_create_cover" />

            <LinearLayout
                android:id="@+id/ll_create_cover"
                style="@style/LinearLayoutOptionsCheckBoxHorizontal">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/chk_create_cover"
                    style="@style/OptionCheckBox" />
                <TextView
                    android:id="@+id/tx_create_cover"
                    style="@style/OptionCheckBoxText"
                    android:text="@string/option_create_cover_text" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/myStyleViewSimpleHorizontalBar" />

        <!-- Split M4B -->
        <LinearLayout style="@style/LinearLayoutOptionsVertical">
            <TextView
                style="@style/OptionTextDefaultFor"
                android:text="@string/default_for" />

            <TextView
                style="@style/OptionTitle"
                android:text="@string/option_split_m4b"
                android:layout_marginTop="0dp" />

            <LinearLayout
                android:id="@+id/ll_split_m4b"
                style="@style/LinearLayoutOptionsCheckBoxHorizontal">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/chk_split_m4b"
                    style="@style/OptionCheckBox" />
                <TextView
                    android:id="@+id/tx_split_m4b"
                    style="@style/OptionCheckBoxText"
                    android:text="@string/option_split_m4b_text" />
            </LinearLayout>
            <TextView
                style="@style/OptionSubTitle"
                android:text="@string/option_split_m4b_subtitle" />
            <TextView
                style="@style/OptionSubTitle"
                android:text="@string/option_split_m4b_subtitle_note"
                android:textStyle="italic" />
        </LinearLayout>

        <View style="@style/myStyleViewSimpleHorizontalBar" />

        <!-- Delete source file -->
        <LinearLayout style="@style/LinearLayoutOptionsVertical">
            <TextView
                style="@style/OptionTextDefaultFor"
                android:text="@string/default_for" />

            <TextView
                style="@style/OptionTitle"
                android:text="@string/option_delete_source_file_title"
                android:layout_marginTop="0dp" />

            <TextView
                style="@style/OptionSubTitle"
                android:text="@string/option_delete_source_file_subtitle" />

            <LinearLayout
                android:id="@+id/ll_delete_source_file"
                style="@style/LayoutWrapContentMargin20horizontal">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/chk_delete_source_file"
                    style="@style/OptionCheckBox" />
                <TextView
                    android:id="@+id/txt_delete_source_file"
                    style="@style/OptionCheckBoxText"
                    android:text="@string/option_delete_source_file_text" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/myStyleViewSimpleHorizontalBar" />

        <!-- Open With -->
        <LinearLayout style="@style/LinearLayoutOptionsVertical">
            <TextView
                style="@style/OptionTitle"
                android:text="@string/option_open_with_title" />

            <TextView
                style="@style/OptionSubTitle"
                android:text="@string/option_open_with_subtitle" />

            <LinearLayout
                android:id="@+id/ll_open_with"
                style="@style/LayoutWrapContentMargin20horizontal">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/chk_open_with"
                    style="@style/OptionCheckBox" />
                <TextView
                    android:id="@+id/txt_open_with"
                    style="@style/OptionCheckBoxText"
                    android:text="@string/option_open_with_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_open_with_all"
                style="@style/LayoutWrapContentMargin20horizontal">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/chk_open_with_all"
                    style="@style/OptionCheckBox" />
                <TextView
                    android:id="@+id/txt_open_with_all"
                    style="@style/OptionCheckBoxText"
                    android:text="@string/option_open_with_text_all" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/myStyleViewSimpleHorizontalBar" />

    </LinearLayout>
</ScrollView>
