<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_library"
        android:title="@string/library"
        android:icon="@drawable/ic_books_movies_and_music_24px" />

    <item
        android:id="@+id/nav_add"
        android:title="@string/add_book"
        android:icon="@drawable/ic_add_book_24" />

    <item
        android:id="@+id/nav_radio"
        android:title="@string/radio"
        android:icon="@drawable/ic_radio_24px" />

    <item
        android:id="@+id/nav_podcast"
        android:title="@string/podcasts"
        android:icon="@drawable/ic_podcast_24" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_24" />

</menu>
