<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical"
    android:color="?colorSecondary"
    >
    <TextView
        android:id="@+id/tv_Counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="000"
        android:minWidth="32dp"
        android:gravity="center" />
    <ImageView
        android:id="@+id/iv_LanguageFlag"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="4dp"
        android:contentDescription="@string/language_flag" />
    <ImageView
        android:id="@+id/iv_VoiceFlag"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="4dp"
        android:contentDescription="@string/voice_flag" />
    <ImageView
        android:id="@+id/iv_sourceFlag"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="4dp"
        android:contentDescription="@string/source_flag" />
    <TextView
        android:id="@+id/tv_VoiceName"
        style="@style/GetResourceSpinner"
        android:layout_margin="0dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/voice_name"
        android:singleLine="true"
        android:textSize="16sp" />

</LinearLayout>
